Changed lots of things as per PMD recommendations. Still need to work on it + use CheckStyle recommendation.